--- a/style.css
+++ b/style.css
@@ -1,19 +1,30 @@
 body {
-    background:white;
+    background-color: grey;
+}
+.top-bar {
+    border: 1px solid green;
+    width: 100%;
+    height: 20px;
+    display: flex;
+
 }
 
-.left-green {
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: bold;
-    font-size: large;
+.top-bar {
+    margin-right: 10px;
 }
 
-.center-green {
-    align-items: center;
+.header {
+    border: 1px solid red;
+    width: 100%;
+    height: 20px;
 }
-
-.top-orange {
-    align-items: center;
-   
+.nav-bar {
+    border: 1px solid purple;
+    width: 100%;
+    height: 20px;
 }
-
+.main {
+    border: 1px solid yellow;
+    width: 100%;
+    height: 20px;
+}
